crates/weft-snapshots/tests/snapshots/lit-js/corpus-error-state.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: corpus-error-state as lit-js
---
import { LitElement, html, nothing } from "lit";
import { styleMap } from "lit/directives/style-map.js";

function _text(v) {
  if (typeof v === "string") return v;
  if (typeof v === "number") return Number.isFinite(v) ? String(v) : "";
  if (typeof v === "boolean") return String(v);
  return "";
}

function _squash(v) {
  return v.trim().replace(/\s+/g, " ");
}

function _act(actions, event) {
  if (typeof actions !== "object" || actions === null || !Object.hasOwn(actions, event.action)) return;
  const fn = actions[event.action];
  if (typeof fn === "function") fn(event);
}

function _url(value) {
  const url = value.replace(/[\t\n\r]/g, "").replace(/^[\u0000- ]+|[\u0000- ]+$/g, "");
  if (url === "") return undefined;
  const colon = url.indexOf(":");
  const delimiter = url.search(/[/?#]/);
  if (colon < 0 || (delimiter >= 0 && colon > delimiter)) return url;
  const scheme = /^([A-Za-z][A-Za-z0-9+.-]*):/.exec(url)?.[1]?.toLowerCase();
  return scheme === "http" || scheme === "https" || scheme === "mailto" ? url : undefined;
}

class WeftScreen extends LitElement {
  static properties = {
    data: { attribute: false },
    actions: { attribute: false },
    onChange: { attribute: false },
  };

  // The light DOM, so the page's stylesheet and the ids that labels refer to reach the controls.
  createRenderRoot() {
    return this;
  }

  render() {
    const { data, actions, onChange } = this;
    return html`<main data-weft-id="load-error" data-state="error" aria-label="Load error"
      ><div data-weft-id="alert" role="alert" data-tone="danger"
        ><h2 data-weft-id="error-title">Could not load your data</h2
        ><div data-weft-id="error-message">${!(_text(data?.error?.message).trim() === "") ? _squash(_text(data?.error?.message)) : ""}</div
      ></div
      ><div data-weft-id="actions" style=${styleMap({ gap: "var(--weft-space-sm)", display: "flex", flexDirection: "row", alignItems: "center" })}
        ><button data-weft-id="retry" type="button" data-variant="primary" @click=${(_e) => _act(actions, { id: "retry", action: "load.retry" })}>Retry</button>${(() => {
          const _href = _url("");
          return html`<a data-weft-id="support" href=${(_href) ?? nothing} role=${(_href === undefined ? "link" : undefined) ?? nothing} tabindex=${(_href === undefined ? 0 : undefined) ?? nothing} @keydown=${_href === undefined ? (_e) => { if (_e.key !== "Enter" || _e.target !== _e.currentTarget) return; _e.preventDefault(); _act(actions, { id: "support", action: "nav.support" }); } : undefined} @click=${() => _act(actions, { id: "support", action: "nav.support" })} style=${styleMap({ display: "inline-block" })}>Contact support</a>`;
        })()}</div
    ></main>`;
  }
}

if (!customElements.get("weft-screen")) customElements.define("weft-screen", WeftScreen);

export default WeftScreen;
