crates/weft-snapshots/tests/snapshots/lit-js/corpus-leaderboard.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: corpus-leaderboard as lit-js
---
import { LitElement, html } from "lit";
import { styleMap } from "lit/directives/style-map.js";

function _text(v) {
  if (typeof v === "string") return v;
  if (typeof v === "number") return Number.isFinite(v) ? String(v) : "";
  if (typeof v === "boolean") return String(v);
  return "";
}

function _get(value, path) {
  for (const key of path) {
    if (Array.isArray(value)) value = /^\d+$/.test(key) ? value[Number(key)] : undefined;
    else if (typeof value === "object" && value !== null && Object.hasOwn(value, key)) value = value[key];
    else return undefined;
  }
  return value;
}

function _squash(v) {
  return v.trim().replace(/\s+/g, " ");
}

function _list(v) {
  return Array.isArray(v) ? v : [];
}

class WeftScreen extends LitElement {
  static properties = {
    data: { attribute: false },
    actions: { attribute: false },
    onChange: { attribute: false },
  };

  // The light DOM, so the page's stylesheet and the ids that labels refer to reach the controls.
  createRenderRoot() {
    return this;
  }

  render() {
    const { data, actions, onChange } = this;
    return html`<main data-weft-id="leaderboard" aria-label="Leaderboard"
      ><h1 data-weft-id="title">Leaderboard</h1
      ><div data-weft-id="leader" style=${styleMap({ gap: "var(--weft-space-xs)", display: "flex", flexDirection: "row", alignItems: "center" })}
        ><div data-weft-id="leader-label">In the lead:</div
        ><div data-weft-id="leader-name">${!(_text(_get(data, ["players","0","name"])).trim() === "") ? _squash(_text(_get(data, ["players","0","name"]))) : ""}</div
      ></div
      ><ol data-weft-id="players">${_list(data?.players).map((player, _i0) => html`<li data-weft-id=${"player[" + _i0 + "]"}
            ><div data-weft-id=${"player-name[" + _i0 + "]"}>${!(_text(player?.name).trim() === "") ? _squash(_text(player?.name)) : ""}</div
            ><div data-weft-id=${"player-score[" + _i0 + "]"} data-tone="muted">${!(_text(player?.score).trim() === "") ? _squash(_text(player?.score)) : ""}</div
          ></li>`)}</ol
    ></main>`;
  }
}

if (!customElements.get("weft-screen")) customElements.define("weft-screen", WeftScreen);

export default WeftScreen;
