crates/weft-snapshots/tests/snapshots/lit-js/corpus-login.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: corpus-login as lit-js
---
import { LitElement, html, nothing } from "lit";
import { styleMap } from "lit/directives/style-map.js";

function _text(v) {
  if (typeof v === "string") return v;
  if (typeof v === "number") return Number.isFinite(v) ? String(v) : "";
  if (typeof v === "boolean") return String(v);
  return "";
}

function _on(v) {
  return v === "false" ? false : Boolean(v);
}

function _act(actions, event) {
  if (typeof actions !== "object" || actions === null || !Object.hasOwn(actions, event.action)) return;
  const fn = actions[event.action];
  if (typeof fn === "function") fn(event);
}

function _url(value) {
  const url = value.replace(/[\t\n\r]/g, "").replace(/^[\u0000- ]+|[\u0000- ]+$/g, "");
  if (url === "") return undefined;
  const colon = url.indexOf(":");
  const delimiter = url.search(/[/?#]/);
  if (colon < 0 || (delimiter >= 0 && colon > delimiter)) return url;
  const scheme = /^([A-Za-z][A-Za-z0-9+.-]*):/.exec(url)?.[1]?.toLowerCase();
  return scheme === "http" || scheme === "https" || scheme === "mailto" ? url : undefined;
}

class WeftScreen extends LitElement {
  static properties = {
    data: { attribute: false },
    actions: { attribute: false },
    onChange: { attribute: false },
  };

  // The light DOM, so the page's stylesheet and the ids that labels refer to reach the controls.
  createRenderRoot() {
    return this;
  }

  render() {
    const { data, actions, onChange } = this;
    return html`<main data-weft-id="login" aria-label="Sign in"
      ><form data-weft-id="form" data-state="idle" @submit=${(_e) => { _e.preventDefault(); _act(actions, { id: "form", action: "auth.submit" }); }}
        ><h1 data-weft-id="title">Sign in</h1
        ><div data-weft-id="fields" style=${styleMap({ gap: "var(--weft-space-md)", display: "flex", flexDirection: "column" })}
          ><div data-weft-field=""
            ><label
              ><span aria-hidden="true">Email</span
              ><input data-weft-id="email" aria-label="Email" type="email" required .value=${_text(data?.email)} @input=${(_e) => onChange?.("$.email", _e.currentTarget.value)}
            ></label
          ></div
          ><div data-weft-field=""
            ><label
              ><span aria-hidden="true">Password</span
              ><input data-weft-id="password" aria-label="Password" type="password" required .value=${_text(data?.password)} @input=${(_e) => onChange?.("$.password", _e.currentTarget.value)}
            ></label
          ></div
        ></div
        ><button data-weft-id="submit" type="submit" ?disabled=${!_on(data?.email)} data-variant="primary" @click=${(_e) => { _e.preventDefault(); _act(actions, { id: "form", action: "auth.submit" }); }}>Sign in</button
        ><div data-weft-slot="footer">${(() => {
            const _href = _url("");
            return html`<a data-weft-id="reset" href=${(_href) ?? nothing} role=${(_href === undefined ? "link" : undefined) ?? nothing} tabindex=${(_href === undefined ? 0 : undefined) ?? nothing} @keydown=${_href === undefined ? (_e) => { if (_e.key !== "Enter" || _e.target !== _e.currentTarget) return; _e.preventDefault(); _act(actions, { id: "reset", action: "nav.reset" }); } : undefined} @click=${() => _act(actions, { id: "reset", action: "nav.reset" })} style=${styleMap({ display: "inline-block" })}>Forgot password?</a>`;
          })()}${(() => {
            const _href = _url("");
            return html`<a data-weft-id="signup" href=${(_href) ?? nothing} role=${(_href === undefined ? "link" : undefined) ?? nothing} tabindex=${(_href === undefined ? 0 : undefined) ?? nothing} @keydown=${_href === undefined ? (_e) => { if (_e.key !== "Enter" || _e.target !== _e.currentTarget) return; _e.preventDefault(); _act(actions, { id: "signup", action: "nav.signup" }); } : undefined} @click=${() => _act(actions, { id: "signup", action: "nav.signup" })} style=${styleMap({ display: "inline-block" })}>Create an account</a>`;
          })()}</div
      ></form
    ></main>`;
  }
}

if (!customElements.get("weft-screen")) customElements.define("weft-screen", WeftScreen);

export default WeftScreen;
