crates/weft-snapshots/tests/snapshots/lit-js/corpus-menu.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: corpus-menu as lit-js
---
import { LitElement, html } from "lit";

function _text(v) {
  if (typeof v === "string") return v;
  if (typeof v === "number") return Number.isFinite(v) ? String(v) : "";
  if (typeof v === "boolean") return String(v);
  return "";
}

function _on(v) {
  return v === "false" ? false : Boolean(v);
}

function _squash(v) {
  return v.trim().replace(/\s+/g, " ");
}

function _act(actions, event) {
  if (typeof actions !== "object" || actions === null || !Object.hasOwn(actions, event.action)) return;
  const fn = actions[event.action];
  if (typeof fn === "function") fn(event);
}

class WeftScreen extends LitElement {
  static properties = {
    data: { attribute: false },
    actions: { attribute: false },
    onChange: { attribute: false },
  };

  // The light DOM, so the page's stylesheet and the ids that labels refer to reach the controls.
  createRenderRoot() {
    return this;
  }

  render() {
    const { data, actions, onChange } = this;
    return html`<main data-weft-id="account-menu" aria-label="Account menu"
      ><div data-weft-id="signed-in">${!(_text(data?.user?.email).trim() === "") ? _squash(_text(data?.user?.email)) : ""}</div
      ><div data-weft-id="menu" aria-label="Account" role="menu"
        ><button data-weft-id="item-profile" type="button" role="menuitem" @click=${() => _act(actions, { id: "item-profile", action: "nav.profile" })}>Profile</button
        ><button data-weft-id="item-settings" type="button" role="menuitem" @click=${() => _act(actions, { id: "item-settings", action: "nav.settings" })}>Settings</button
        ><button data-weft-id="item-billing" type="button" role="menuitem" ?disabled=${!_on(data?.isOwner)} @click=${() => _act(actions, { id: "item-billing", action: "nav.billing" })}>Billing</button
        ><button data-weft-id="item-signout" type="button" role="menuitem" @click=${() => _act(actions, { id: "item-signout", action: "auth.signout" })}>Sign out</button
      ></div
    ></main>`;
  }
}

if (!customElements.get("weft-screen")) customElements.define("weft-screen", WeftScreen);

export default WeftScreen;
